[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Diego Chávez <diego@volumens.-com>"]

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"